--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "typings": "index.d.ts",
   "scripts": {
+    "dev": "npm run start",
     "start": "webpack-dev-server  --open --color --hot --mode development --inline  --profile",
     "build": " webpack  --mode production --progress --profile",
     "watch": "jest --watchAll --cache -b --debug --errorOnDeprecated --expand",
@@ -38,6 +39,7 @@
     "os": "^0.1.1",
     "postcss-aspect-ratio-mini": "^1.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-plugin-px2rem": "^0.8.1",
     "postcss-preset-env": "^6.6.0",
     "postcss-px-to-viewport": "^1.1.0",
     "postcss-viewport-units": "^0.1.6",
@@ -47,6 +49,8 @@
     "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1",
     "react-virtualized": "^9.21.0",
+    "ts-loader": "^6.0.2",
+    "typescript": "^3.5.1",
     "url-loader": "^1.1.2"
   },
   "devDependencies": {
@@ -84,8 +88,6 @@
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.22.1",
     "ts-import-plugin": "^1.5.4",
-    "ts-jest": "^23.1.4",
-    "ts-loader": "^4.5.0",
     "typescript": "^3.0.1",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.16.5",
