--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "devserver-qrcode-webpack-plugin": "^0.0.6",
+    "glob-all": "^3.1.0",
     "happypack": "^5.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -83,6 +84,9 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.1",
     "postcss-loader": "^3.0.0",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
+    "react-hot-loader": "^4.11.0",
     "react-redux": "^6.0.0",
     "react-test-renderer": "^16.4.2",
     "redux-saga": "^0.16.2",
@@ -95,5 +99,8 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-notifier": "^1.7.0"
+  },
+  "optimization": {
+    "usedExports":true
   }
 }
