--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-loadable": "^5.5.0",
+    "react-pullto": "^1.0.0",
     "react-router-dom": "^4.3.1",
     "react-virtualized": "^9.21.0",
     "ts-loader": "^6.0.2",
@@ -101,6 +102,6 @@
     "webpack-notifier": "^1.7.0"
   },
   "optimization": {
-    "usedExports":true
+    "usedExports": true
   }
 }
