--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-router-dom": "^4.3.1",
     "react-virtualized": "^9.21.0",
     "ts-loader": "^6.0.2",
+    "tslint": "^5.17.0",
     "typescript": "^3.5.1",
     "url-loader": "^1.1.2"
   },
